--- a/.travis.yml
+++ b/.travis.yml
@@ -10,36 +10,12 @@ matrix:
       dist: trusty
       language: python
       python: 2.7
-      services:
-        - docker
       addons:
         apt:
           packages:
           - python-pip
-      before_script:
-        - docker run -it -d --name ${TARGET} ${IMAGE_NAME} /bin/sh
-      after_script:
-        - docker rm -f ${TARGET}
       env:
-        - IMAGE_NAME=fgtatsuro/infra-bridgehead:debian-jessie
-        - TARGET=container
-    - os: linux
-      dist: trusty
-      language: python
-      python: 2.7
-      services:
-        - docker
-      addons:
-        apt:
-          packages:
-          - python-pip
-      before_script:
-        - docker run -it -d --name ${TARGET} ${IMAGE_NAME} /bin/sh
-      after_script:
-        - docker rm -f ${TARGET}
-      env:
-        - TARGET=container
-        - IMAGE_NAME=fgtatsuro/infra-bridgehead:alpine-3.3
+        - TARGET=localhost
 
 # This role needs sudo, thus we can't use the new container infrastructure
 # sudo: false
